--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   },
   "dependencies": {
     "@material-tailwind/react": "0.3.4",
+    "@next-auth/firebase-adapter": "^0.1.3",
+    "firebase": "^8.10.0",
     "next": "latest",
+    "next-auth": "^3.29.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
